--- a/ngEventTracker/src/app/app.component.html
+++ b/ngEventTracker/src/app/app.component.html
@@ -1,3 +1,4 @@
 <!-- <app-navigation>nav bar loading...</app-navigation> -->
-<app-meal></app-meal>
+<!-- <app-meal></app-meal> -->
+<app-navbar></app-navbar>
 <router-outlet></router-outlet>
