--- a/ngEventTracker/src/app/components/meal/meal.component.html
+++ b/ngEventTracker/src/app/components/meal/meal.component.html
@@ -1,8 +1,8 @@
 <p>meal works!</p>
 <h1>
-  {{title}}
+  {{title}} Total Number of Meals
   <span class="badge badge-primary" [ngClass]="badgeColor() ">
-    {{numberOfMeals()}}
+    {{countMeals()}}
   </span>
   <div id="createNewMeal">
       <form>
