--- a/ngEventTracker/src/app/components/navbar/navbar.component.html
+++ b/ngEventTracker/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 
-<ul>
-  <li><a [routerLink]="['/home']" > Home </a> </li>
-<li><a [routerLink]="['/meals']"> Meal </a></li>
-</ul>
+
+<a [routerLink]="['/home']" > Home </a> |
+<a [routerLink]="['/meals']"> Meal </a>
+
